<resources>
    <string name="app_name">Phone DB</string>
    <!--    TextView names      -->
    <string name="manufacturerTextView">Manufacturer:</string>
    <string name="modelText">Model:</string>
    <string name="androidTextView">Android:</string>
    <string name="url">URL:</string>
    <!--    Hints      -->
    <string name="manufacturerHint">Enter a manufacturer</string>
    <string name="modelHint">Enter model</string>
    <string name="androidHint">Enter an Android version</string>
    <string name="urlHint">Enter URL</string>
    <!--    Button names      -->
    <string name="urlButton">Go to URL</string>
    <string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    <!--    Error messages      -->
    <string name="manufacturerErr">Please enter the manufacturer!</string>
    <string name="androidVersionErr">Please enter the Android version!</string>
    <string name="modelErr">Please enter the model!</string>
    <string name="urlErr">Please enter URL address!</string>
    <string name="delete_all">Delete All</string>
    <string name="todo">TODO</string>
</resources>