<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="2">

    <TableRow
        android:id="@+id/manufacturer_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/manufacturerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturerTextView" />

        <EditText
            android:id="@+id/manufacturerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/manufacturerHint"
            android:text=""
            android:importantForAutofill="no"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/model_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelText" />

        <EditText
            android:id="@+id/modelEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/modelHint"
            android:text=""
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="text"/>
    </TableRow>
    <TableRow
        android:id="@+id/android_version_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/aVersionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/androidTextView" />

        <EditText
            android:id="@+id/aVersionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/androidHint"
            android:text=""
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="number"/>
    </TableRow>
    <TableRow
        android:id="@+id/webpage_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/urlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url" />

        <EditText
            android:id="@+id/urlEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/urlHint"
            android:text=""
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="textUri"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/urlButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/urlButton"/>
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelButton"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:text="@string/saveButton"/>
    </TableRow>
</TableLayout>
